[package]
name = "cylon"
description = "An efficient compiler for robots.txt files"
version = "0.2.0"
authors = ["Creston Bunch <rust@bunch.im>"]
edition = "2018"

categories = ["parser-implementations"]
license = "MIT"
keywords = ["robots", "txt", "parse", "compile"]
repository = "https://github.com/crestonbunch/cylon"

[features]
crawl-delay = []

[dependencies]
futures-util = { version = "0.3", features = ["io"] }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures"] }
tokio-test = "0.4"

[[bench]]
name = "parse"
harness = false
